Fix the location options dropdown not showing in profiles

--- a/app/assets/styles/components.global.scss
+++ b/app/assets/styles/components.global.scss
@@ -408,7 +408,7 @@ Item
   right: 8px;
 }
 .BasicDropdown__profile {
-  position: absolute !important;
+  position: relative !important;
   top: 0px;
   left: -43px;
 }
